# voxel-engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: depth_prepass.wgsl  fluid.wgsl  portal_entrance.wgsl  terrain.wgsl  terrain_functions.wgsl  terrain_material.wgsl  terrain_types.wgsl  texture_binding_array.wgsl
docs/: chunk_file_format.md
src/: age.rs  block.rs  camera_distance.rs  chunk.rs  chunk_data.rs  controls.rs  cube_frame.rs  debug.rs  debug_plugin.rs  file.rs  file_io.rs  item.rs  main.rs  material.rs  mesh.rs  physics.rs  player.rs  portal.rs  render.rs  render_layer.rs  shader.rs  state.rs  structure.rs  texture.rs  ui.rs  utils.rs  world.rs  world_noise.rs
src/chunk/: chunk_data.rs  chunk_position.rs  data.rs  index.rs  neighborhood.rs  position.rs  spatial.rs  stage.rs
src/controls/: keyboard_and_mouse.rs
src/debug_plugin/: chunk_border.rs  hitbox_frame.rs  perf_ui_camera_block.rs  perf_ui_camera_facing.rs  perf_ui_camera_pos.rs  perf_ui_targeted_block.rs
src/file_io/: block_spec.rs  chunk_file_data.rs
src/mesh/: terrain_material.rs  terrain_mesh.rs
src/physics/: aabb.rs  collision.rs  falling_state.rs  friction.rs  gravity.rs  velocity.rs
src/player/: block_target.rs  controls.rs  health.rs  hotbar.rs  inventory.rs  mode.rs
src/render/: material.rs  mesh.rs  texture.rs
src/ui/: block_icons.rs  crosshair.rs  health.rs  hotbar.rs  main_menu.rs  pause_menu.rs
src/world/: block_update.rs  chunk_neighborhood.rs  cleanup.rs  index.rs  neighborhood.rs  seed.rs  stage.rs  world_noise.rs
(+4 files in other folders)
