[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.2", features = [ "dynamic_linking" ] }
bevy_polyline = "0.10.0"
itertools = "0.13.0"
iyes_perf_ui = "0.3.0"
noise = "0.9.0"
rayon = "1.10.0"
strum = "0.26"
strum_macros = "0.26"

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"