[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = [ "dynamic_linking" ] }
itertools = "0.14.0"
iyes_perf_ui = "0.5"
noise = "0.9.0"
rayon = "1.10.0"
strum = "0.27.1"
strum_macros = "0.27.1"
log = { version = "*", features = [ "max_level_debug", "release_max_level_warn" ] }
rand = "0.9.1"

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"